--- a/CIVIL/Preguntas civil/Preguntas civil.html
+++ b/CIVIL/Preguntas civil/Preguntas civil.html
@@ -573,7 +573,7 @@
                                         </ul>
                                     </div>
                                     <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-                                        <p class="copyright">Estudio De Suelos © 2018</p>
+                                        <p class="copyright">Estudio De suelos © 2018</p>
                                     </div>
                                 </div>
                             </div>
