todas las preguntas html

--- a/CIVIL/Preguntas civil/Preguntas civil.html
+++ b/CIVIL/Preguntas civil/Preguntas civil.html
@@ -508,24 +508,250 @@
 
 				<input type="checkbox" name="elementos" id="Almacenamientos">
 				<label for="Almacenamientos"> Almacenamientos </label>
-			<p>
-
-				<input type="checkbox" name="elementos" id="Ninguna de las anteriores">
-				<label for="Ninguna de las anteriores"> Ninguna de las anteriores </label>
-			<p>
-
-				<input type="checkbox" name="elementos" id="industrial">
-				<label for="industrial">Industrial </label>
-			<p>
-
-				<input type="checkbox" name="elementos" id="hotelero">
-				<label for="hotelero">Hotelero </label>
-			<p>
-
-				<input type="checkbox" name="elementos" id="otros">
-				<label for="otros"> No aplica</label>
-			<p>
+			</p>			
 		</div>
+
+		<!-- Seccion 8 interior de vivienda -->
+
+		<div class="text">
+			<center>
+				<h1 class="titulo-preguntas">Al interior de la vivienda </h1>
+				<h4 class="h4-preguntas">Las siguientes preguntas se deberán realizar por dentro de la vivienda para poder observar las
+					características de las preguntas</h4>
+			</center>
+		</div>
+
+		<!-- PREGUNTA #8 -->
+
+		<div class="checkbox">
+			<h2> ¿Altura entre los pisos? </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> 2 metros </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">2.1 a 2.5 metros</label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> 2.6 a 3 metros </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">3.1 metros o mayores </label>
+
+			</p>	
+		</div>
+
+		<!-- SECCION #9 -->
+		<!-- PREGUNTA #9.1 -->
+
+		<div class="checkbox">
+			<h2> ¿Material de contruccion de la vivienda? </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Mamposteria </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">Concreto reforzado</label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Prefabricado </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Acero </label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Madera </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Adobe </label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Tapia </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">Guadua</label>
+
+			</p>
+			<p>
+				<input type="text" name="elementos" id="comercial">
+				<label for="comercial">Otro</label>
+
+			<p>
+
+		</div>
+
+		<!-- PREGUNTA #9.2.2 -->
+		<!-- OPCION A MAMPOSTERIA -->
+
+		<div class="checkbox">
+			<h2> Tipo mamposteria </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Reforzada </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">No reforzada</label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Confinada </label>
+			<p>	
+		</div>
+
+		<!-- OPCION  B  CONCRETO REFORZADO -->
+
+		<div class="checkbox">
+			<h2> Concreto reforzado </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Muro estructural </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">Portico</label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Sistema dual o combinado </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Prefabricado </label>
+
+			</p>	
+		</div>
+
+		<!-- OPCION  C  Prefabricado -->
+
+		<div class="checkbox">
+			<h2> Prefabricado </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Yeso </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">Madera</label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> PVC </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Drywall </label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Fibrocentimetro </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Otro </label>
+
+			</p>		
+		</div>
+
+		<!-- SECCION #10 -->
+		<!-- PREGUNTA #10 -->
+
+		<div class="checkbox">
+			<h2> ¿Como se encuentra construido el piso de la vivienda? </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Losa de concreto aligerado </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Losa de concreto maciza </label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Vigas de madera </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Vigas de acero </label>
+
+			</p>
+					
+		</div>
+
+		<!-- SECCION #11 -->
+		<!-- PREGUNTA #11 -->
+
+		<div class="checkbox">
+			<h2> ¿Material de contruccion del techo la vivienda? </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Losa de concreto aligerado </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Losa de concreto maciza </label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Zinc </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial"> Termina en plancha </label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Placa facil </label>
+			<p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Eternit </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">Estructura de madera y tejas de barro </label>
+
+			</p>
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> Metalica </label>
+			<p>
+				
+			
+
+		</div>
+
+		<!-- SECCION #12 -->
+		<!-- PREGUNTA #12.1 -->
+
+		<div class="checkbox">
+			<h2> ¿la edificacion presenta algun asentamiento? </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> SI </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">NO </label>
+
+			</p>	
+		</div>
+
+		<!-- PREGUNTA #12.2 -->
+
+		<div class="checkbox">
+			<h2> ¿Se evidencian grietas en los muros y/o columnas? </h2>
+
+			<input type="checkbox" name="elementos" id="residencial ">
+				<label for="residencial "> SI </label>
+			<p>
+				<input type="checkbox" name="elementos" id="comercial">
+				<label for="comercial">NO </label>
+
+			</p>	
+		</div>
+
+
+
+
+
+
+
+	
+
+
+
+
 
 
 		
